fix(select): pop-up z-index to max

--- a/src/components/style/variables.scss
+++ b/src/components/style/variables.scss
@@ -1,20 +1,22 @@
 :root {
-  --jdd-font-sans: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
-  --jdd-font-mono: "JetBrains Mono", SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
+    --jdd-font-sans: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+    --jdd-font-mono: "JetBrains Mono", SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
 
-  --jdd-border-radius: .5rem;
-  --jdd-border-radius-small: .3rem;
-  --jdd-border-radius-large: .8rem;
+    --jdd-border-radius: .5rem;
+    --jdd-border-radius-small: .3rem;
+    --jdd-border-radius-large: .8rem;
 
-  --jdd-shadow: 0 .25rem .5rem rgba(0, 0, 0, .1);
-  --jdd-shadow-small: 0 .125rem .25rem rgba(0, 0, 0, .075);
-  --jdd-shadow-large: 0 .5rem 1rem rgba(0, 0, 0, .175);
+    --jdd-shadow: 0 .25rem .5rem rgba(0, 0, 0, .1);
+    --jdd-shadow-small: 0 .125rem .25rem rgba(0, 0, 0, .075);
+    --jdd-shadow-large: 0 .5rem 1rem rgba(0, 0, 0, .175);
 
-  --jdd-transition-duration: .3s;
-  --jdd-transition-function: cubic-bezier(.645,.045,.355,1);
-  --jdd-transition-colors: color var(--jdd-transition-duration) var(--jdd-transition-function), background-color var(--jdd-transition-duration) var(--jdd-transition-function), border-color var(--jdd-transition-duration) var(--jdd-transition-function), text-decoration-color var(--jdd-transition-duration) var(--jdd-transition-function), fill var(--jdd-transition-duration) var(--jdd-transition-function), stroke var(--jdd-transition-duration) var(--jdd-transition-function);
+    --jdd-transition-duration: .3s;
+    --jdd-transition-function: cubic-bezier(.645, .045, .355, 1);
+    --jdd-transition-colors: color var(--jdd-transition-duration) var(--jdd-transition-function), background-color var(--jdd-transition-duration) var(--jdd-transition-function), border-color var(--jdd-transition-duration) var(--jdd-transition-function), text-decoration-color var(--jdd-transition-duration) var(--jdd-transition-function), fill var(--jdd-transition-duration) var(--jdd-transition-function), stroke var(--jdd-transition-duration) var(--jdd-transition-function);
 
-  --jdd-accessibility-outline-width: 4px;
+    --jdd-accessibility-outline-width: 4px;
 
-  --jdd-button-cursor: default;
+    --jdd-button-cursor: default;
+
+    --jdd-z-index-max: 2147483647;
 }
